[package]
name = "jsonwebkey"
version = "0.0.3"
authors = ["Nick Hynes <nhynes@nhynes.com>"]
description = "JSON Web Key (JWK) (de)serialization, generation, and conversion."
readme = "README.md"
repository = "https://github.com/nhynes/jwk-rs"
license = "MIT"
edition = "2018"

[dependencies]
base64 = "0.12"
bitflags = "1.2"
derive_more = "0.99"
jsonwebtoken = { version = "7.2", optional = true }
num-bigint = { version = "0.2", optional = true }
p256 = { version = "0.3", optional = true }
rand = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "1.0", features = ["full"] } # required to parse const generics
thiserror = "1.0"
yasna = { version = "0.3", optional = true, features = ["num-bigint"] }
zeroize = { version = "1.1", features = ["zeroize_derive"] }

[features]
convert = ["num-bigint", "yasna"]
generate = ["p256", "rand"]

[dev-dependencies]
jsonwebtoken = "7.2"
