[package]
name = "jsonwebkey"
version = "0.3.5"
authors = ["Nick Hynes <nhynes@nhynes.com>"]
description = "JSON Web Key (JWK) (de)serialization, generation, and conversion."
readme = "README.md"
repository = "https://github.com/nhynes/jwk-rs"
documentation = "http://docs.rs/jsonwebkey/"
license = "MIT"
edition = "2021"

[dependencies]
base64        = "0.13"
bitflags      = "1.2"
generic-array = "0.14"
jsonwebtoken  = { version = "8.0",  optional = true }
num-bigint    = { version = "0.4",  optional = true }
p256          = { version = "0.10", optional = true, features = ["arithmetic"] }
rand          = { version = "0.8",  optional = true }
serde         = { version = "1.0",  features = ["derive"] }
serde_json    = "1.0"
sha2          = { version = "0.10", optional = true }
thiserror     = "1.0"
yasna         = { version = "0.5",  optional = true, features = ["num-bigint"] }
zeroize       = { version = "1.5",  features = ["zeroize_derive"] }

[features]
pkcs-convert = ["num-bigint", "yasna"]
jwt-convert  = ["pkcs-convert", "jsonwebtoken"]
generate     = ["p256", "rand"]
thumbprint   = ["sha2"]

[dev-dependencies]
jsonwebtoken = "8.0"

[package.metadata.docs.rs]
all-features = true
