[package]
name = "jsonwebkey"
version = "0.4.0"
authors = ["Nick Hynes <nhynes@nhynes.com>"]
description = "JSON Web Key (JWK) (de)serialization, generation, and conversion."
readme = "README.md"
repository = "https://github.com/nhynes/jwk-rs"
documentation = "http://docs.rs/jsonwebkey/"
license = "MIT"
edition = "2021"

[dependencies]
base64        = "0.22.1"
bitflags      = "2.10.0"
digest        = { version = "0.10.7", optional = true }
jsonwebtoken  = { version = "10.2", optional = true, features = ["rust_crypto"] }
num-bigint    = { version = "0.4.6",  optional = true }
p256          = { version = "0.13.2", optional = true, features = ["arithmetic"] }
rand          = { version = "0.9.2",  optional = true }
serde         = { version = "1.0.228",  features = ["derive"] }
serde_json    = "1.0.145"
sha2          = { version = "0.10.9", optional = true }
thiserror     = "2.0.17"
yasna         = { version = "0.5.2",  optional = true, features = ["num-bigint"] }
zeroize       = { version = "1.8.2",  features = ["zeroize_derive"] }

[features]
pkcs-convert = ["num-bigint", "yasna"]
jwt-convert  = ["pkcs-convert", "jsonwebtoken"]
generate     = ["p256", "rand"]
thumbprint   = ["digest", "sha2"]

[dev-dependencies]
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

[package.metadata.docs.rs]
all-features = true
